# End-to-End-Retail-Data-Warehouse-Analytics-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: retail_etl_dag.py
docs/: api.md  architecture.md  dashboard.md  etl_flow.md  interview_prep.md  star_schema.md
powerbi/: dashboard_spec.md  data_model.md  dax_measures.md
scripts/: build_pdf_guide.py  generate_data.py  init_db.py  run_etl.py
sql/indexes/: create_indexes.sql
sql/stored_procedures/: sp_monthly_refresh.sql  sp_sales_summary.sql
sql/tables/: create_dimensions.sql  create_facts.sql  create_staging.sql
sql/views/: vw_customer_segmentation.sql  vw_profitability_analysis.sql  vw_regional_performance.sql  vw_revenue_by_month.sql  vw_sales_trends.sql  vw_top_customers.sql  vw_top_products.sql
src/: __init__.py
src/analytics/: __init__.py  queries.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  customers.py  dashboard.py  health.py  kpis.py  products.py  sales.py
src/config/: __init__.py  config.py
src/dashboard/: __init__.py
src/database/: __init__.py  database.py
src/etl/: __init__.py  pipeline.py
src/etl/extract/: __init__.py  extractor.py
src/etl/load/: __init__.py  loader.py
src/etl/transform/: __init__.py  clean.py  transformer.py
src/models/: __init__.py  base.py  dim_category.py  dim_customer.py  dim_date.py  dim_product.py  dim_region.py  fact_sales.py
src/schemas/: __init__.py  schemas.py
src/utils/: __init__.py  helpers.py  logger.py
src/validation/: __init__.py  validator.py
src/warehouse/: __init__.py  manager.py
tests/: conftest.py  test_api.py  test_extract.py  test_loader.py  test_pipeline.py  test_transform.py  test_validation.py
