[tool.poetry]
name = "retail-data-warehouse"
version = "1.0.0"
description = "End-to-End Retail Data Warehouse & Analytics Platform — Star Schema modeling, ETL pipelines, data quality validation, and a FastAPI analytics layer."
authors = ["Rishik Manche"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
pandas = "^2.2"
numpy = "^1.26"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
alembic = "^1.13"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
pydantic = "^2.7"
pydantic-settings = "^2.3"
chardet = "^5.2"
great-expectations = "^0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
isort = "^5.13"
pytest-cov = "^5.0"
httpx = "^0.27"
pytest-asyncio = "^0.23"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | migrations
  | \.eggs
  | dist
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require database or external services)",
    "etl: ETL pipeline tests",
    "api: API endpoint tests",
    "slow: Slow-running tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
